--- a/oops_excersise.ipynb
+++ b/oops_excersise.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "oops_excersise.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOb7ukjJzldcKjF0MkPf/LG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +31,7 @@
       "source": [
         "import sys"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -58,7 +57,7 @@
       "source": [
         "sys.version_info"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -87,7 +86,7 @@
         "#q1\r\n",
         "print(sys.version.split()[0])"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,7 +111,7 @@
         "import datetime\r\n",
         "datetime.__dict__.keys()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -140,7 +139,7 @@
       "source": [
         "print(*sorted([i for i in datetime.__dict__.keys()], reverse=False ),sep='\\n')"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +192,7 @@
         "        return str(uuid.uuid4().fields[-1])[:6]\r\n",
         "print(*Product.__dict__.keys(), sep='\\n')"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -224,7 +223,7 @@
         "product = Product('Mobile Phone', '54274', 2900)\r\n",
         "print(product.__dict__)"
       ],
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,13 +237,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nz05t5tXV6v2"
+        "id": "nz05t5tXV6v2",
+        "outputId": "fc1126f2-f38f-4d29-ba73-d989a011abce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "def stick(*args):\r\n",
+        "\r\n",
+        "  abc=[arg for arg in args if type(arg)==str]\r\n",
+        "  print(\"#\".join(abc))\r\n",
+        "  \r\n",
+        "stick(\"sport\", \"summer\", 4, True)"
       ],
-      "execution_count": 101,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "sport#summer\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -253,19 +269,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MCnjhHvkYRVu",
-        "outputId": "57f93d94-2a1a-412b-bf6b-d768f0657f56"
+        "outputId": "16927e03-4b5d-4eb1-edaf-b91abb3800ef"
       },
       "source": [
-        ""
+        "type(\"aman\")"
       ],
-      "execution_count": 109,
+      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "{'product_name': 'Mobile Phone', 'product_id': '54274', 'price': 2900}\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
         }
       ]
     }
