--- a/oops_excersise.ipynb
+++ b/oops_excersise.ipynb
@@ -238,10 +238,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "nz05t5tXV6v2",
-        "outputId": "fc1126f2-f38f-4d29-ba73-d989a011abce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fc1126f2-f38f-4d29-ba73-d989a011abce"
       },
       "source": [
         "def stick(*args):\r\n",
@@ -251,7 +251,7 @@
         "  \r\n",
         "stick(\"sport\", \"summer\", 4, True)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,24 +269,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MCnjhHvkYRVu",
-        "outputId": "16927e03-4b5d-4eb1-edaf-b91abb3800ef"
+        "outputId": "377b661f-5bf3-4e15-e19d-553c69607057"
       },
       "source": [
-        "type(\"aman\")"
+        "#11\r\n",
+        "def display_info(company, **kwargs):\r\n",
+        "  if kwargs:\r\n",
+        "    # print(kwargs)\r\n",
+        "    print(\"Company name:\", company)\r\n",
+        "    for i,j in kwargs.items():\r\n",
+        "      print(\"Price: $\",j)\r\n",
+        "\r\n",
+        "display_info(company=\"apple\",price=14)"
       ],
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "str"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 13
+          "output_type": "stream",
+          "text": [
+            "{'price': 14}\n",
+            "Company name: apple\n",
+            "price: $ 14\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
