--- a/oops_excersise.ipynb
+++ b/oops_excersise.ipynb
@@ -282,7 +282,7 @@
         "\r\n",
         "display_info(company=\"apple\",price=14)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,6 +290,66 @@
             "{'price': 14}\n",
             "Company name: apple\n",
             "price: $ 14\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FNyJBICt7BlY",
+        "outputId": "627cdcc1-1214-4fc9-a5ac-03c85f27d440",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#12\r\n",
+        "class Model:\r\n",
+        "  pass\r\n",
+        "class View:\r\n",
+        "  pass\r\n",
+        "model= Model()\r\n",
+        "print(isinstance(model,Model))\r\n",
+        "view=View()\r\n",
+        "print(isinstance(view,Model))"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "False\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BhGuZCC48GDa",
+        "outputId": "8e4cfdc0-0846-468e-b2f5-08335737f1b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#14\r\n",
+        "class Container:\r\n",
+        "  pass\r\n",
+        "container=Container()  \r\n",
+        "print( type(Container.__dict__), type(container.__dict__), sep='\\n')"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'mappingproxy'>\n",
+            "<class 'dict'>\n"
           ],
           "name": "stdout"
         }
